fix login page style bugs on tablet size

--- a/client/src/components/LoginForm/style.css
+++ b/client/src/components/LoginForm/style.css
@@ -68,6 +68,22 @@
   transition: calc(0.7s);
 }
 
+@media screen and (min-width: 820px) {
+  .login-container {
+    width: 50%;
+  }
+  .login-form {
+    width: 100%;
+  }
+  .login-logo {
+    width: 50%;
+  }
+  .btn-login-page-container {
+    width: 100%;
+    text-align: center;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   .register-link:hover,
   .btn-login-page:hover {
@@ -78,13 +94,5 @@
   }
   .login-container {
     width: 30%;
-  }
-
-  .login-form {
-    width: 100%;
-  }
-  .btn-login-page-container {
-    width: 100%;
-    text-align: center;
   }
 }
